# altitude-rl

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main  main.cpp  q_learning_curves.csv  result  sarsa_learning_curves.csv
include/: agent.hpp  control.hpp  env.hpp  train.hpp  utils.hpp
notebooks/: 1_dp.ipynb  2_sarsa.ipynb  3_q_learn.ipynb  README.md  plt_csv.ipynb  tictactoe.py
notebooks/.ipynb_checkpoints/: 2_sarsa-checkpoint.ipynb  3_q_learn-checkpoint.ipynb  dynamic_prog-checkpoint.ipynb  plt_csv-checkpoint.ipynb  tictactoe-checkpoint.py
src/: agent.cpp  env.cpp  main.cpp  main_pid.cpp  main_td.cpp  pid.cpp  train.cpp  utils.cpp
